@startuml bedrift

class Ansatt{
    str navn
    int ansattnr
    float lønn
}

class Leder{
    liste ansatte
    legg_til_ansatt(Ansatt ansatt)
}

class Bedrift{
    str navn
    list ansatte
    Ansatt legg_til_ansatt(str navn, float lønn, str leder_navn)
    Leder legg_til_leder(str navn, float lønn)
}


Leder --|> Ansatt
Leder --o Ansatt
Bedrift --o Ansatt

@enduml